Update UI remove agent selector

--- a/demo/src/app/global.css
+++ b/demo/src/app/global.css
@@ -37,6 +37,7 @@ a {
 .ant-select-selector {
   border: 1px solid #272a2f !important;
   background-color: #272a2f !important;
+  display: none;
 }
 
 .ant-select-dropdown {
@@ -94,6 +95,7 @@ a {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -126,6 +128,7 @@ a {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
