--- a/playground/src/platform/pc/entry/index.module.scss
+++ b/playground/src/platform/pc/entry/index.module.scss
@@ -5,6 +5,10 @@
   display: flex;
   flex-direction: column;
 
+  .ant-select {
+    display: none;
+  }
+
   .content {
     position: relative;
     padding: 16px;
