--- a/playground_candidate/src/platform/pc/entry/index.module.scss
+++ b/playground_candidate/src/platform/pc/entry/index.module.scss
@@ -14,6 +14,10 @@
     flex-direction: column;
     flex-grow: 1;
 
+    .ant-select {
+      display: none !important;
+    }
+
     .body {
       margin-top: 12px;
       display: flex;
