Update UI, add name to Agents

--- a/demo/src/app/global.css
+++ b/demo/src/app/global.css
@@ -11,7 +11,7 @@
 html,
 body {
   background-color: #0f0f11;
-  font-family: "PingFang SC";
+  font-family: "Helvetica", sans-serif;
   height: 100%;
 }
 
