--- a/playground/src/app/global.css
+++ b/playground/src/app/global.css
@@ -7,7 +7,7 @@
 html,
 body {
   background-color: #0F0F11;
-  font-family: "PingFang SC";
+  font-family: "Helvetica", sans-serif;
   height: 100%;
 }
 
