--- a/playground_employee/src/app/company/index.module.scss
+++ b/playground_employee/src/app/company/index.module.scss
@@ -37,6 +37,11 @@
         }
 
         div {
+            display: flex;
+            padding: 30px 30px 30px 30px;
+            flex-direction: column;
+            gap: 30px;
+
             background: rgba(255, 255, 255, 0.15);
             border-radius: 8px;
             backdrop-filter: blur(30px);
@@ -48,6 +53,11 @@
             transform: translateY(20px);
             /* Start slightly below */
             animation: cardEntry 0.5s ease-out forwards;
+
+            img {
+                margin: 0 auto;
+                height: auto !important;
+            }
 
             &:nth-child(1) {
                 animation-delay: 0.2s;
