--- a/playground_candidate/src/app/stats/index.module.scss
+++ b/playground_candidate/src/app/stats/index.module.scss
@@ -16,6 +16,7 @@
         // backdrop-filter: blur(30px);
         width: fit-content;
         font-weight: 300;
+
     }
 
     .grid {
@@ -78,4 +79,26 @@
 
     }
 
+}
+
+.btnNext {
+    width: 250px;
+    height: 60px;
+    display: flex;
+    padding: 8px 14px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    color: #fff;
+    background: #ffffff20;
+    align-self: stretch;
+    border-radius: 6px;
+    border: 1px solid #fff;
+    cursor: pointer;
+    user-select: none;
+    caret-color: transparent;
+    box-sizing: border-box;
+    transition: all .3s ease-in-out;
+    text-align: center;
+    margin: 10px auto 150px;
 }
